[package]
name = "news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossterm = "0.26.1"
derivative = "2.2.0"
directories = "5.0.1"
ratatui = "0.21.0"
reqwest = "0.11.18"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
ureq = "2.7.1"
