[package]
name = "news"
version = "0.1.2"
edition = "2021"
authors = ["Osmium <samy.osmium@gmail.com>"]
description = "Consume the news in yout terminal 📰"
readme = "README.md"
repository = "https://github.com/samyosm/news"
license-file = "LICENSE"
keywords = ["tui", "news"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossterm = "0.26.1"
directories = "5.0.1"
itertools = "0.11.0"
ratatui = "0.22.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
ureq = "2.7.1"
